Ensure the visibility of all things is better, the main color is quite light this year.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,11 @@
+body {
+  background-color: #789;
+}
 a {
   color: var(--main-color);
+}
+nav a, nav ul a {
+  text-shadow: 1px 1px 4px black;
 }
 @media only screen and (max-device-width: 680px) {
   h1 {
